# projetoAldebaran

./: .gitignore  AGENTS.md  CHANGELOG_DECISOES.md  LICENSE  PLANS.md  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01_DiretivasIniciais.md  02_Arquitetura.md  03_RegrasNegocio.md  04_ModeloDados.md  05_Backlog.md  06_PlanoTestes.md
scripts/: gerar_dados_sinteticos.py
src/: __init__.py  pipeline.py
src/analytics/: __init__.py  kpis.py
src/audit/: __init__.py  auditor.py
src/consolidation/: consolidator.py
src/export/: __init__.py  formatters.py
src/ingestion/: __init__.py  directory.py  parser.py  parser_rel.py  parser_rel_analitico.py  parser_rel_compras.py
src/transformation/: __init__.py  standardizer.py
src/validation/: __init__.py  validator.py
tests/: conftest.py  test_analytics.py  test_consolidation.py  test_export_audit.py  test_ingestion.py  test_ingestion_rel.py  test_transformation.py  test_validation.py
tests/fixtures/: mapa_vendas_teste.xlsx
